--- a/simplefilter/src/component/project1/Login.css
+++ b/simplefilter/src/component/project1/Login.css
@@ -1,4 +1,5 @@
 input {
+  position: absolute;
     border: 0;
     outline: 0;
     background: transparent;
@@ -18,29 +19,79 @@ input {
     
   }
   .login{
-    position: absolute;
+    display: block;
     width: 100%;
     height: 100%;
+    position: absolute;
   }
+  
+  .out-box {
+    position: absolute;
+    position: center;
+    background-color: #ffffff;
+    text-align: center;
+    left: 35%;
+    top: 30%;
 
-  img{
-    z-index: -2!important;
-position: absolute;
-      width: 100%;
-      height: 100%;
-      color: #ed5736;
-      font-family: "Russo One";
-      font-size: 50px;
-      font-style: normal;
-      font-stretch: normal;
-      font-weight: 400;
-      line-height: 60px;
-      text-align: left;
-      text-transform: none;
-      text-decoration: none;
-      letter-spacing: 0px;
+        width: 500px;
+        height: 600px;
+        color: #ed5736;
+        font-family: RussoOne;
+        font-weight: 400;
+        line-height: 67px;
+        text-transform: none;
+        text-decoration: none;
+        letter-spacing: 0px;
+      }
+
     
-  }
+      
+
+      #form-title{
+        
+        position: relative;
+        margin-top: 30px;
+        color: #ed5736;
+        font-family: "Russo One";
+        font-size: 35px;
+        font-style: normal;
+        font-stretch: normal;
+        font-weight: 400;
+        line-height: 42px;
+        text-align: center;
+        text-transform: none;
+        text-decoration: none;
+        letter-spacing: 0px;
+    }
+    form{
+      position: relative;
+      margin-top: 30px;
+    }
+  /* no button background color ,
+  no border radius */
+    #form-button {
+      background-color: #ed5736;
+      border-radius: 10px;
+      position: relative;
+      margin-top: 50px;
+          width: 386px;
+          height: 50px;
+          color: #ffffff!important;
+          font-family: Roboto;
+          font-size: 25px;
+          font-style: normal;
+          font-stretch: normal;
+          font-weight: 400;
+          line-height: 33px;
+          text-align: center;
+          text-transform: none;
+          text-decoration: none;
+          letter-spacing: 0px;
+        
+      
+    }
+
+  
   .error-required::placeholder{
       width: 53.85px;
       height: 30px;
@@ -60,9 +111,54 @@ position: absolute;
         
       
   }
+  .form-input{
+    position: relative;
+      width: 386px;
+      height: 36px;
+      color: #ed5736;
+      font-family: RussoOne;
+      font-size: 50px;
+      font-style: normal;
+      font-stretch: normal;
+      font-weight: 400;
+      line-height: 67px;
+      text-align: left;
+      text-transform: none;
+      text-decoration: none;
+      letter-spacing: 0px;
+    
+  }
   .error-message{
+    position: absolute;
+      width: 386px;
+      height: 36px;
+      color: #424c50;
+      font-family: Roboto;
+      font-size: 25px;
+      font-style: normal;
+      font-stretch: normal;
+      font-weight: 400;
+      line-height: 33px;
+      text-align: left;
+      text-transform: none;
+      text-decoration: none;
+      letter-spacing: 0px;
+    
+  }
+  .error-message input{
+    
+    position: relative!important;
       z-index: 1;
-        width: 204px;
+        
+      border-bottom: 1px solid black
+    
+    
+  }
+ span.error-message {
+    position: absolute!important;
+    right:1.5rem;
+    top:1.5rem;
+    width: 204px!important;
         height: 29px;
         color: #ff2121;
         font-family: Roboto;
@@ -75,9 +171,6 @@ position: absolute;
         text-transform: none;
         text-decoration: none;
         letter-spacing: 0px;
-      border-bottom: 1px solid black
-    
-    
   }
   input::placeholder {
       width: 131.67px;
@@ -111,71 +204,52 @@ position: absolute;
         position: relative;
       
   }
-  
 
-
-
-
-.out-box {
-margin: auto;
-
-  margin-top: 100px;
-background-color: #ffffff;
-text-align: center;
-    width: 500px;
-    height: 600px;
-    color: #ed5736;
-    font-family: RussoOne;
-    font-weight: 400;
-    line-height: 67px;
-    text-transform: none;
-    text-decoration: none;
-    letter-spacing: 0px;
-  }
-  form{
-    margin-top: auto;
-    position: relative;
-    
-  }
-  
-  #form-title{
-    
-      margin-top: 30px!important;
-      margin-left: 10%;
-      position: absolute;
+  .footer{
+    bottom: 0;
+    background-color: rgba(100, 100, 100,0.3);
+    position: absolute;
+      width: 500px;
+      height: 118px!important;
       color: #ed5736;
-      font-family: "Russo One";
-      font-size: 35px;
+      font-family: RussoOne;
+      font-size: 50px;
       font-style: normal;
       font-stretch: normal;
       font-weight: 400;
-      line-height: 42px;
+      line-height: 67px;
       text-align: center;
       text-transform: none;
       text-decoration: none;
       letter-spacing: 0px;
-  }
-/* no button background color ,
-no border radius */
-  #form-button {
-    background-color: #ed5736;
-    border-radius: 10px;
-        width: 386px;
-        height: 50px;
-        color: #ffffff!important;
-        font-family: Roboto;
-        font-size: 25px;
-        font-style: normal;
-        font-stretch: normal;
-        font-weight: 400;
-        line-height: 33px;
-        text-align: center;
-        text-transform: none;
-        text-decoration: none;
-        letter-spacing: 0px;
-      
     
   }
+  .footer span{
+    position: relative;
+      width: 356px;
+      height: 30px;
+      color: #424c50;
+      font-family: Roboto;
+      font-size: 25px;
+      font-style: normal;
+      font-stretch: normal;
+      font-weight: 400;
+      line-height: 33px;
+      text-align: left;
+      text-transform: none;
+      text-decoration: none;
+      letter-spacing: 0px;
+    
+    
+  }
+  
+
+
+
+
+
+  
+  
   
   
   
