--- a/simplefilter/src/component/project1/SignUp.css
+++ b/simplefilter/src/component/project1/SignUp.css
@@ -3,7 +3,7 @@ input {
     border: 0;
     outline: 0;
     background: transparent;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgba(100, 100, 100,0.3);
     z-index: 1;
         width: 386px;
         height: 36px;
@@ -31,7 +31,7 @@ input {
     background-color: #ffffff;
     text-align: center;
     left: 35%;
-    top: 30%;
+    top: 20%;
 
         width: 500px;
         height: 600px;
@@ -208,6 +208,7 @@ input {
   .footer{
     bottom: 0;
     background-color: rgba(100, 100, 100,0.3);
+    box-shadow: 0 0 5px 5px rgba(100, 100, 100,0.3);
     position: absolute;
       width: 500px;
       height: 118px!important;
