--- a/simplefilter/src/component/project1/SignUp.css
+++ b/simplefilter/src/component/project1/SignUp.css
@@ -19,7 +19,10 @@ input {
     
   }
   .login{
-    display: block;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto auto;
+
     width: 100%;
     height: 100%;
     position: absolute;
@@ -30,8 +33,10 @@ input {
     position: center;
     background-color: #ffffff;
     text-align: center;
-    left: 35%;
-    top: 20%;
+    /* left: 30%; */
+    top: 10%;
+    grid-column-start:2 ;
+    margin: auto;
 
         width: 500px;
         height: 600px;
@@ -50,10 +55,11 @@ input {
       #form-title{
         
         position: relative;
-        margin-top: 30px;
+        margin-top: 50px;
+        
         color: #ed5736;
         font-family: "Russo One";
-        font-size: 35px;
+        font-size: 50px;
         font-style: normal;
         font-stretch: normal;
         font-weight: 400;
